@@ -1,3 +1,5 @@
+/*	$NetBSD: deflate.c,v 1.2 1996/09/13 00:29:59 cgd Exp $	*/
+
 /* deflate.c -- compress data using the deflation algorithm
  * Copyright (C) 1995-1996 Jean-loup Gailly.
  * For conditions of distribution and use, see copyright notice in zlib.h 
@@ -46,8 +48,6 @@
  *         Data Compression with Finite Windows, Comm.ACM, 32,4 (1989) 490-595
  *
  */
-
-/* $Id: deflate.c,v 1.1.1.1 1996/09/12 15:33:09 gwr Exp $ */
 
 #include "deflate.h"
 
